Start of new project with assignment 6

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,37 @@
       </span>
 
       Welcome to CS 2350!
+      <h1>Image gallery using Flexbox</h1>
+      <div class="gallery">
+        <div class="top">
+          <div class="left">
+            <div class="image"><img src="images/trail.jpg" alt=""></div>
+            <div class="image"><img src="images/trail.jpg" alt=""></div>
+            <div class="image"><img src="images/trail.jpg" alt=""></div>
+          </div>
+          <div class="middle">
+            <div class="image"><img src="images/lake.jpg" alt=""></div>
+            <div class="image"><img src="images/lake.jpg" alt=""></div>
+          </div>
+          <div class="right">
+            <div class="top">
+              <div class="image"><img src="images/plant.jpg" alt=""></div>
+              <div class="image"><img src="images/plant.jpg" alt=""></div>
+              <div class="image"><img src="images/plant.jpg" alt=""></div>
+            </div>
+            <div class="image middle"><img src="images/field.jpg" alt=""></div>
+            <div class="bottom">
+              <div class="image"><img src="images/parrot.jpg" alt=""></div>
+              <div class="image"><img src="images/parrot.jpg" alt=""></div>
+            </div>
+          </div>
+        </div>
+        <div class="bottom">
+          <div class="image"><img src="images/sunset.jpg" alt=""></div>
+          <div class="image"><img src="images/sunset.jpg" alt=""></div>
+        </div>
+      </div>
+
     </h1>
 
     <script type="module" src="./javascripts/main.js"></script>
