First project assignment

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
       <div class="gallery">
         <div class="top">
           <div class="left">
-            <div class="image"><img src="images/trail.jpg" alt=""></div>
+            <div class="image"><img src="images/lake.jpg" alt=""></div>
             <div class="image"><img src="images/trail.jpg" alt=""></div>
             <div class="image"><img src="images/trail.jpg" alt=""></div>
           </div>
